# C-http-server

./: .gitignore  CMakeLists.txt  README.md  TODO.md  index.html
example/: basic.c  fmw.c  main.c  min.c
example/public/: index.html  script.js
inc/: base_server.h  error.h  http_server.h  httpprot.h  server.h  url.h  utils.h
inc/cp_defs/: srv.h
inc/cpdefs/: strdef.h
inc/misc/: error.h  path.h  url.h  utils.h
inc/server/: base_server.h  http_server.h  httpprot.h  srv.h
inc/structs/: pair.h  record.h
inc/wrap/: thread.h
src/: base_server.c  client.c  error.c  http_server.c  httpprot.c  main.c  pair.c  path.c  record.c  server.c  srv.c  thread.c  url.c  utils.c
